k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-project
  labels:
    name: eks-project
